Cleanup code
* Remove deprecations
* Use Java 17 language features